--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ALLOSH SUPREME V84 👑</title>
+    <title>ALLOSH EMPIRE V85 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
@@ -12,33 +12,38 @@
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
         body { background: var(--bg); color: white; overflow: hidden; height: 100vh; width: 100%; position: fixed; }
 
-        /* الهيدر */
-        .header { height: 65px; background: #0a0a0a; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; }
-        .owner-glow { font-weight: 900; background: linear-gradient(to right, #ffd700, #fff, #ffd700); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: shine 2s infinite; }
-        @keyframes shine { to { background-position: 200% center; } }
+        /* فخامة اسم علوش - متحرك ملكي */
+        .king-style {
+            font-size: 18px; font-weight: 900;
+            background: linear-gradient(to right, #ffd700, #fff, #ffd700, #ff4757);
+            background-size: 200% auto; -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+            animation: royal-shine 2s linear infinite;
+            text-shadow: 0 0 10px rgba(255, 215, 0, 0.3);
+        }
+        @keyframes royal-shine { to { background-position: 200% center; } }
 
-        /* القوائم */
-        .side { position: fixed; top: 0; bottom: 0; width: 290px; background: rgba(10,10,10,0.98); z-index: 9999; backdrop-filter: blur(15px); transition: 0.4s; }
-        #side-r { right: -300px; border-left: 2px solid var(--gold); }
-        #side-l { left: -300px; border-right: 2px solid var(--gold); overflow-y: auto; }
+        /* الرتب */
+        .badge { font-size: 10px; padding: 2px 6px; border-radius: 4px; font-weight: bold; margin-right: 5px; vertical-align: middle; }
+        .badge-owner { background: linear-gradient(45deg, #ffd700, #b8860b); color: #000; box-shadow: 0 0 5px gold; }
+        .badge-vip { background: #444; color: #eee; }
+        .badge-bot { background: var(--blue); color: #000; }
+
+        /* الهيدر والقوائم - إصلاح جذري */
+        .header { height: 65px; background: #0a0a0a; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; }
+        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: rgba(10, 10, 10, 0.98); z-index: 10000; backdrop-filter: blur(15px); transition: 0.4s ease; }
+        #side-r { right: -290px; border-left: 2px solid var(--gold); }
+        #side-l { left: -290px; border-right: 2px solid var(--gold); overflow-y: auto; }
         .side.active { transform: translateX(0); }
+        #side-r.active { right: 0; } #side-l.active { left: 0; }
         #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 9000; display: none; }
 
-        /* الملف الشخصي */
-        .p-top { position: relative; width: 100%; height: 180px; background: #111; }
-        .p-cov { width: 100%; height: 140px; object-fit: cover; border-bottom: 2px solid var(--gold); cursor: pointer; }
-        .p-av { width: 85px; height: 85px; border-radius: 50%; border: 3px solid var(--gold); background: #000; position: absolute; bottom: 0; right: 20px; cursor: pointer; }
-
-        /* الشات ونظام اليوتيوب */
+        /* الشات */
         #chat-flow { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
-        .bubble { background: rgba(255,255,255,0.07); padding: 12px; border-radius: 15px; border: 1px solid #222; max-width: 85%; position: relative; }
-        .yt-box { width: 100%; max-width: 250px; height: 140px; border-radius: 10px; margin-top: 10px; border: 1px solid #444; display: block; }
-        .bot-msg { border: 1px solid var(--blue); background: rgba(0,210,255,0.05); color: var(--blue); padding: 10px; border-radius: 10px; text-align: center; margin: 5px 0; font-size: 13px; }
+        .bubble { background: rgba(255,255,255,0.07); padding: 10px 15px; border-radius: 15px; border: 1px solid #222; max-width: 85%; }
+        .yt-frame { width: 100%; max-width: 240px; height: 135px; border-radius: 10px; margin-top: 8px; border: 1px solid #444; }
 
-        /* لوحة الإدارة */
+        /* الإدارة والفوتر */
         .adm-box { background: #111; border: 1px solid var(--gold); border-radius: 10px; padding: 10px; margin: 10px; display: none; }
-        .adm-btn { flex: 1; padding: 10px; border: none; border-radius: 5px; font-weight: bold; cursor: pointer; color: white; }
-
         .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #0a0a0a; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 15px; }
         #msg-in { flex: 1; height: 45px; background: #111; border: 1px solid #333; border-radius: 12px; color: #fff; padding: 0 15px; }
     </style>
@@ -49,7 +54,7 @@
 
 <div class="header">
     <button onclick="openSide('side-l')" style="background:none; border:none; font-size:26px; color:white;">⚙️</button>
-    <div class="owner-glow" style="font-size:18px;">إمبراطورية علوش</div>
+    <div class="king-style" style="font-size:18px;">إمبراطورية علوش</div>
     <button onclick="openSide('side-r')" style="background:none; border:none; font-size:26px; color:white;">👥</button>
 </div>
 
@@ -57,32 +62,26 @@
     <h3 style="padding:20px; text-align:center; color:var(--gold);">🛡️ الإدارة والمتصلون</h3>
     <div id="admin-area" class="adm-box">
         <div style="display:flex; gap:5px;">
-            <button class="adm-btn" style="background:var(--red);" onclick="clearChat()">🧹 تنظيف</button>
-            <button class="adm-btn" style="background:orange;" onclick="toggleLock()">🔒 قفل</button>
+            <button onclick="if(confirm('تنظيف؟')) db.ref('chat_v85').remove()" style="flex:1; background:red; border:none; padding:8px; border-radius:5px; color:white; font-weight:bold;">🧹 تنظيف</button>
+            <button onclick="toggleLock()" style="flex:1; background:orange; border:none; padding:8px; border-radius:5px; color:white; font-weight:bold;">🔒 قفل</button>
         </div>
     </div>
-    <div id="on-list" style="padding:10px;">
-        <div style="padding:10px; border-bottom:1px solid #111; color:var(--blue);">🛡️ بوت الحماية <span style="float:left; font-size:10px;">BOT</span></div>
-    </div>
+    <div id="on-list" style="padding:10px;"></div>
 </div>
 
 <div id="side-l" class="side">
-    <div class="p-top">
-        <img class="p-cov" id="my-cov" src="https://images.unsplash.com/photo-1614850523296-d8c1af93d400" onclick="document.getElementById('in-cov').click()">
-        <input type="file" id="in-cov" hidden onchange="upImg(this, 'my-cov')">
-        <img class="p-av" id="my-av" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" onclick="document.getElementById('in-av').click()">
-        <input type="file" id="in-av" hidden onchange="upImg(this, 'my-av')">
+    <div style="padding:20px; text-align:center; border-bottom:1px solid #222;">
+        <img id="my-av" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:80px; height:80px; border-radius:50%; border:2px solid gold;">
+        <h2 class="king-style">علوش</h2>
+        <span class="badge badge-owner">مالك الشات</span>
     </div>
-    <div style="padding:25px; text-align:center; margin-top:15px;">
-        <h2 class="owner-glow">علوش</h2>
-        <p style="color:gold;">المالك الرسمي</p>
-    </div>
+    <div style="padding:15px; color:gray; font-size:12px; text-align:center;">إعدادات الحساب والخصوصية</div>
 </div>
 
 <div id="chat-flow"></div>
 
 <div class="footer">
-    <input type="text" id="msg-in" placeholder="أمرك مطاع..." onkeypress="if(event.key==='Enter') pushMsg()">
+    <input type="text" id="msg-in" placeholder="تكلم يا إمبراطور..." onkeypress="if(event.key==='Enter') pushMsg()">
     <button onclick="pushMsg()" style="background:var(--gold); border:none; padding:10px 20px; border-radius:12px; font-weight:900;">إرسال</button>
 </div>
 
@@ -95,67 +94,53 @@
 
     if(me.name === "علوش") document.getElementById('admin-area').style.display = 'block';
 
-    // نظام اليوتيوب (إصلاح شامل)
-    function checkYT(text) {
-        const regex = /(?:youtube\.com\/(?:[^\/]+\/.+\/|(?:v|e(?:mbed)?)\/|.*[?&]v=)|youtu\.be\/)([^"&?\/\s]{11})/;
-        const match = text.match(regex);
-        return match ? `<iframe class="yt-box" src="https://www.youtube.com/embed/${match[1]}" frameborder="0" allowfullscreen></iframe>` : '';
-    }
-
-    // رسالة البوت عند الدخول
-    window.onload = () => {
-        let b = document.createElement('div'); b.className = "bot-msg";
-        b.innerHTML = "🛡️ نظام الحماية مفعل.. أهلاً بك يا إمبراطور علوش.";
-        document.getElementById('chat-flow').appendChild(b);
-    };
-
-    function clearChat() { if(confirm("مسح الشات؟")) db.ref('chat_v84').remove(); }
-    function toggleLock() { db.ref('locked').transaction(l => !l); }
-
-    db.ref('locked').on('value', s => {
-        let locked = s.val();
-        document.getElementById('msg-in').disabled = (locked && me.name !== "علوش");
-        document.getElementById('msg-in').placeholder = locked ? "الشات مغلق بأمر المالك 🔒" : "تكلم يا إمبراطور...";
-    });
-
-    function upImg(input, id) {
-        if(input.files && input.files[0]) {
-            let r = new FileReader();
-            r.onload = (e) => { 
-                document.getElementById(id).src = e.target.result;
-                if(id==='my-av') me.img = e.target.result;
-            };
-            r.readAsDataURL(input.files[0]);
-        }
+    // نظام اليوتيوب
+    function parseYT(t) {
+        const m = t.match(/(?:youtube\.com\/(?:[^\/]+\/.+\/|(?:v|e(?:mbed)?)\/|.*[?&]v=)|youtu\.be\/)([^"&?\/\s]{11})/);
+        return m ? `<iframe class="yt-frame" src="https://www.youtube.com/embed/${m[1]}" frameborder="0" allowfullscreen></iframe>` : '';
     }
 
     function pushMsg() {
-        let i = document.getElementById('msg-in'); if(!i.value || i.disabled) return;
-        db.ref('chat_v84').push({ u: me.name, t: i.value, a: me.img });
+        let i = document.getElementById('msg-in'); if(!i.value) return;
+        db.ref('chat_v85').push({ u: me.name, t: i.value, a: me.img });
         i.value = "";
     }
 
-    db.ref('chat_v84').limitToLast(20).on('child_added', s => {
+    db.ref('chat_v85').limitToLast(20).on('child_added', s => {
         let d = s.val(); let isK = d.u === "علوش";
-        let yt = checkYT(d.t);
         let div = document.createElement('div');
         div.innerHTML = `<div style="display:flex; gap:10px; margin-bottom:12px;">
             <img src="${d.a || me.img}" style="width:38px; height:38px; border-radius:50%; border:1px solid ${isK?'gold':'#333'};">
-            <div class="bubble"><b class="${isK?'owner-glow':''}" style="font-size:12px;">${d.u}</b><br>${d.t}${yt}</div>
+            <div class="bubble">
+                <span class="${isK?'king-style':''}" style="font-size:12px;">${d.u}</span>
+                ${isK?'<span class="badge badge-owner">مالك الشات</span>':''}
+                <br>${d.t}${parseYT(d.t)}
+            </div>
         </div>`;
         document.getElementById('chat-flow').appendChild(div);
         document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
     });
 
-    db.ref('online_v84/' + me.name).set(true);
-    db.ref('online_v84/' + me.name).onDisconnect().remove();
-    db.ref('online_v84').on('value', s => {
+    // المتصلون والرتب (إصلاح القائمة)
+    db.ref('online_v85/' + me.name).set(true);
+    db.ref('online_v85/' + me.name).onDisconnect().remove();
+    db.ref('online_v85').on('value', s => {
         let l = document.getElementById('on-list');
-        l.innerHTML = `<div style="padding:10px; border-bottom:1px solid #111; color:var(--blue);">🛡️ بوت الحماية <span style="float:left; font-size:10px;">BOT</span></div>`;
+        l.innerHTML = `<div style="padding:10px; border-bottom:1px solid #111;"><span class="badge badge-bot">BOT</span> بوت الحماية</div>`;
         s.forEach(u => {
             let isK = u.key === "علوش";
-            l.innerHTML += `<div style="padding:10px; border-bottom:1px solid #111;" class="${isK?'owner-glow':''}"> ${isK?'👑':''} ${u.key}</div>`;
+            l.innerHTML += `<div style="padding:12px; border-bottom:1px solid #111; display:flex; justify-content:space-between; align-items:center;">
+                <span class="${isK?'king-style':''}">${isK?'👑':''} ${u.key}</span>
+                ${isK ? '<span class="badge badge-owner">مالك الشات</span>' : '<span class="badge badge-vip">عضو VIP</span>'}
+            </div>`;
         });
+    });
+
+    function toggleLock() { db.ref('locked').transaction(l => !l); }
+    db.ref('locked').on('value', s => {
+        let locked = s.val();
+        document.getElementById('msg-in').disabled = (locked && me.name !== "علوش");
+        document.getElementById('msg-in').placeholder = locked ? "الشات مغلق حالياً 🔒" : "تكلم يا إمبراطور...";
     });
 
     function openSide(id) { closeSides(); document.getElementById(id).classList.add('active'); document.getElementById('overlay').style.display = 'block'; }
