--- a/index.html
+++ b/index.html
@@ -3,53 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ALLOSH EMPIRE V86 👑</title>
+    <title>ALLOSH SUPREME V87 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
         :root { --gold: #ffd700; --bg: #0b0b0b; --blue: #00d2ff; }
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
-        body { background: var(--bg); color: white; overflow: hidden; height: 100vh; position: fixed; width: 100%; }
+        body { background: var(--bg); color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
 
-        /* فخامة اسم علوش والمالك */
+        /* فخامة اسم علوش */
         .king-style {
             font-size: 18px; font-weight: 900;
-            background: linear-gradient(to right, #ffd700, #fff, #ffd700, #ff4757);
+            background: linear-gradient(to right, #ffd700, #fff, #ffd700);
             background-size: 200% auto; -webkit-background-clip: text; -webkit-text-fill-color: transparent;
             animation: shine 2s linear infinite;
         }
         @keyframes shine { to { background-position: 200% center; } }
 
-        /* الرتب */
-        .badge { font-size: 10px; padding: 2px 8px; border-radius: 4px; font-weight: bold; margin-right: 5px; border: 1px solid rgba(255,255,255,0.1); }
-        .badge-owner { background: linear-gradient(45deg, #ffd700, #b8860b); color: #000; box-shadow: 0 0 10px rgba(255, 215, 0, 0.4); }
-        .badge-bot { background: var(--blue); color: #000; }
-        .badge-vip { background: #333; color: #ccc; }
-
-        /* الهيدر والقوائم */
-        .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; position: relative; }
-        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: #0e0e0e; z-index: 10000; transition: 0.4s ease-in-out; visibility: hidden; opacity: 0; }
+        /* الهيدر */
+        .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; flex-shrink: 0; }
+        
+        /* القوائم الجانبية */
+        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: #0e0e0e; z-index: 10000; transition: 0.3s ease; visibility: hidden; }
         #side-r { right: -280px; border-left: 2px solid var(--gold); }
         #side-l { left: -280px; border-right: 2px solid var(--gold); }
-        .side.active { visibility: visible; opacity: 1; transform: translateX(0); }
+        .side.active { visibility: visible; transform: translateX(0); }
         #side-r.active { transform: translateX(-280px); }
         #side-l.active { transform: translateX(280px); }
         #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 9000; display: none; }
 
-        /* الشات */
-        #chat-flow { position: absolute; top: 60px; bottom: 80px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 15px; }
+        /* منطقة الشات */
+        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 15px; background: #0b0b0b; }
         .bubble { background: #1a1a1a; padding: 12px; border-radius: 15px; border: 1px solid #333; max-width: 85%; }
-        .yt-frame { width: 100%; max-width: 240px; height: 135px; border-radius: 10px; margin-top: 10px; border: 1px solid #444; }
+        .badge { font-size: 10px; padding: 2px 8px; border-radius: 4px; font-weight: bold; margin-right: 5px; }
+        .badge-owner { background: gold; color: black; }
 
-        /* الملف الشخصي */
-        .profile-box { text-align: center; padding: 20px; }
-        .p-av { width: 100px; height: 100px; border-radius: 50%; border: 3px solid var(--gold); margin-bottom: 15px; cursor: pointer; }
+        /* الفوتر (إصلاح الظهور في الحاسبة) */
+        .footer { height: 80px; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 15px; flex-shrink: 0; position: relative; z-index: 500; }
+        .input-wrapper { display: flex; width: 100%; gap: 10px; align-items: center; max-width: 1000px; margin: 0 auto; }
+        #msg-in { flex: 1; height: 50px; background: #181818; border: 1px solid #333; border-radius: 25px; color: #fff; padding: 0 20px; font-size: 16px; outline: none; }
+        #msg-in:focus { border-color: var(--gold); }
+        .send-btn { background: var(--gold); color: #000; border: none; height: 50px; padding: 0 25px; border-radius: 25px; font-weight: 900; cursor: pointer; transition: 0.2s; }
+        .send-btn:hover { transform: scale(1.05); }
 
-        /* الفوتر */
-        .footer { position: fixed; bottom: 0; width: 100%; height: 80px; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 10px; }
-        #msg-in { flex: 1; height: 45px; background: #111; border: 1px solid #333; border-radius: 20px; color: #fff; padding: 0 15px; outline: none; }
-        .send-btn { background: var(--gold); color: #000; border: none; width: 45px; height: 45px; border-radius: 50%; margin-right: 10px; font-weight: bold; cursor: pointer; }
+        /* اليوتيوب */
+        .yt-frame { width: 100%; max-width: 300px; height: 170px; border-radius: 10px; margin-top: 10px; }
     </style>
 </head>
 <body>
@@ -57,34 +56,35 @@
 <div id="overlay" onclick="closeSides()"></div>
 
 <div class="header">
-    <button onclick="openSide('side-l')" style="background:none; border:none; font-size:24px; color:white;">⚙️</button>
+    <button onclick="openSide('side-l')" style="background:none; border:none; font-size:24px; color:white; cursor:pointer;">⚙️</button>
     <div class="king-style">إمبراطورية علوش</div>
-    <button onclick="openSide('side-r')" style="background:none; border:none; font-size:24px; color:white;">👥</button>
+    <button onclick="openSide('side-r')" style="background:none; border:none; font-size:24px; color:white; cursor:pointer;">👥</button>
 </div>
 
 <div id="side-r" class="side">
-    <h3 style="padding:20px; text-align:center; color:gold; border-bottom:1px solid #222;">🛡️ المتصلون</h3>
+    <h3 style="padding:20px; text-align:center; color:gold;">🛡️ المتصلون</h3>
     <div id="admin-tools" style="padding:10px; display:none;">
-        <button onclick="db.ref('chat_data').remove()" style="width:100%; background:red; color:white; border:none; padding:8px; border-radius:5px; font-weight:bold; margin-bottom:15px;">🧹 تنظيف الشات</button>
+        <button onclick="db.ref('chat_v87').remove()" style="width:100%; background:red; color:white; border:none; padding:10px; border-radius:8px; cursor:pointer;">🧹 تنظيف الشات</button>
     </div>
-    <div id="on-list"></div>
+    <div id="on-list" style="padding:10px;"></div>
 </div>
 
 <div id="side-l" class="side">
-    <div class="profile-box">
-        <img id="my-av" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" class="p-av" onclick="document.getElementById('file-in').click()">
+    <div style="padding:30px; text-align:center;">
+        <img id="my-av" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:90px; height:90px; border-radius:50%; border:3px solid gold; cursor:pointer;" onclick="document.getElementById('file-in').click()">
         <input type="file" id="file-in" hidden onchange="changeAv(this)">
-        <h2 class="king-style">علوش</h2>
-        <p class="badge badge-owner" style="display:inline-block; margin-top:10px;">مالك الشات الرسمي</p>
+        <h2 class="king-style" style="margin-top:15px;">علوش</h2>
+        <span class="badge badge-owner">مالك الشات</span>
     </div>
-    <div style="padding:20px; color:gray; font-size:12px; text-align:center;">نظام علوش المتكامل V86</div>
 </div>
 
 <div id="chat-flow"></div>
 
 <div class="footer">
-    <input type="text" id="msg-in" placeholder="تكلم يا إمبراطور..." onkeypress="if(event.key==='Enter') sendMsg()">
-    <button class="send-btn" onclick="sendMsg()">Go</button>
+    <div class="input-wrapper">
+        <input type="text" id="msg-in" placeholder="أمرك مطاع يا إمبراطور..." onkeypress="if(event.key==='Enter') sendMsg()">
+        <button class="send-btn" onclick="sendMsg()">إرسال</button>
+    </div>
 </div>
 
 <script>
@@ -93,24 +93,20 @@
     const db = firebase.database();
 
     let me = { name: "علوش", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png" };
-
-    // تفعيل الإدارة لعلوش
     if(me.name === "علوش") document.getElementById('admin-tools').style.display = 'block';
 
-    // تغيير الصورة
     function changeAv(input) {
         if(input.files && input.files[0]) {
-            let reader = new FileReader();
-            reader.onload = (e) => { document.getElementById('my-av').src = e.target.result; me.img = e.target.result; };
-            reader.readAsDataURL(input.files[0]);
+            let r = new FileReader();
+            r.onload = (e) => { document.getElementById('my-av').src = e.target.result; me.img = e.target.result; };
+            r.readAsDataURL(input.files[0]);
         }
     }
 
-    // إرسال الرسائل واليوتيوب
     function sendMsg() {
-        let inp = document.getElementById('msg-in'); if(!inp.value) return;
-        db.ref('chat_data').push({ u: me.name, t: inp.value, a: me.img });
-        inp.value = "";
+        let i = document.getElementById('msg-in'); if(!i.value) return;
+        db.ref('chat_v87').push({ u: me.name, t: i.value, a: me.img });
+        i.value = "";
     }
 
     function getYT(t) {
@@ -118,48 +114,34 @@
         return m ? `<iframe class="yt-frame" src="https://www.youtube.com/embed/${m[1]}" frameborder="0" allowfullscreen></iframe>` : '';
     }
 
-    db.ref('chat_data').limitToLast(20).on('child_added', s => {
+    db.ref('chat_v87').limitToLast(20).on('child_added', s => {
         let d = s.val(); let isK = d.u === "علوش";
         let div = document.createElement('div');
-        div.style.display = "flex"; div.style.gap = "10px"; div.style.marginBottom = "15px";
-        div.innerHTML = `
-            <img src="${d.a || me.img}" style="width:40px; height:40px; border-radius:50%; border:1px solid ${isK?'gold':'#444'};">
+        div.style.display="flex"; div.style.gap="10px"; div.style.marginBottom="15px";
+        div.innerHTML = `<img src="${d.a || me.img}" style="width:40px; height:40px; border-radius:50%; border:1px solid gold;">
             <div class="bubble">
-                <span class="${isK?'king-style':''}" style="font-size:13px;">${d.u}</span>
-                ${isK ? '<span class="badge badge-owner">مالك الشات</span>' : ''}
-                <div style="margin-top:5px; font-size:15px;">${d.t}</div>
-                ${getYT(d.t)}
+                <span class="${isK?'king-style':''}">${d.u}</span> ${isK?'<span class="badge badge-owner">المالك</span>':''}
+                <div style="margin-top:5px;">${d.t}</div>${getYT(d.t)}
             </div>`;
         document.getElementById('chat-flow').appendChild(div);
         document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
     });
 
-    // قائمة المتصلين والرتب
-    db.ref('online_v86/' + me.name).set(true);
-    db.ref('online_v86/' + me.name).onDisconnect().remove();
-    db.ref('online_v86').on('value', s => {
-        let list = document.getElementById('on-list');
-        list.innerHTML = `<div style="padding:15px; border-bottom:1px solid #222;"><span class="badge badge-bot">BOT</span> بوت الحماية</div>`;
+    db.ref('online_v87/' + me.name).set(true);
+    db.ref('online_v87/' + me.name).onDisconnect().remove();
+    db.ref('online_v87').on('value', s => {
+        let l = document.getElementById('on-list'); l.innerHTML = "";
         s.forEach(u => {
             let isK = u.key === "علوش";
-            list.innerHTML += `
-                <div style="padding:15px; border-bottom:1px solid #111; display:flex; justify-content:space-between; align-items:center;">
-                    <span class="${isK?'king-style':''}">${isK?'👑 ':''}${u.key}</span>
-                    <span class="badge ${isK?'badge-owner':'badge-vip'}">${isK?'مالك الشات':'عضو VIP'}</span>
-                </div>`;
+            l.innerHTML += `<div style="padding:12px; border-bottom:1px solid #222; display:flex; justify-content:space-between;">
+                <span class="${isK?'king-style':''}">${isK?'👑 ':''}${u.key}</span>
+                <span class="badge ${isK?'badge-owner':''}" style="color:gray;">${isK?'المالك':'عضو'}</span>
+            </div>`;
         });
     });
 
-    // فتح وإغلاق القوائم (إصلاح نهائي)
-    function openSide(id) {
-        document.getElementById(id).classList.add('active');
-        document.getElementById('overlay').style.display = 'block';
-    }
-    function closeSides() {
-        document.getElementById('side-l').classList.remove('active');
-        document.getElementById('side-r').classList.remove('active');
-        document.getElementById('overlay').style.display = 'none';
-    }
+    function openSide(id) { closeSides(); document.getElementById(id).classList.add('active'); document.getElementById('overlay').style.display = 'block'; }
+    function closeSides() { document.querySelectorAll('.side').forEach(s => s.classList.remove('active')); document.getElementById('overlay').style.display = 'none'; }
 </script>
 </body>
 </html>
