--- a/index.html
+++ b/index.html
@@ -3,52 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ALLOSH SUPREME V87 👑</title>
+    <title>ALLOSH THEMES V88 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
-        :root { --gold: #ffd700; --bg: #0b0b0b; --blue: #00d2ff; }
+        :root { --gold: #ffd700; --bg: #0b0b0b; --royal: linear-gradient(to right, #ffd700, #fff, #ffd700); }
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
         body { background: var(--bg); color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
 
-        /* فخامة اسم علوش */
-        .king-style {
-            font-size: 18px; font-weight: 900;
-            background: linear-gradient(to right, #ffd700, #fff, #ffd700);
-            background-size: 200% auto; -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-            animation: shine 2s linear infinite;
-        }
+        /* ثيمات الأسماء */
+        .name-glow { font-weight: 900; animation: shine 2s linear infinite; background-size: 200% auto; -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
         @keyframes shine { to { background-position: 200% center; } }
-
-        /* الهيدر */
-        .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; flex-shrink: 0; }
         
-        /* القوائم الجانبية */
-        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: #0e0e0e; z-index: 10000; transition: 0.3s ease; visibility: hidden; }
-        #side-r { right: -280px; border-left: 2px solid var(--gold); }
-        #side-l { left: -280px; border-right: 2px solid var(--gold); }
+        .theme-gold { background-image: linear-gradient(to right, #ffd700, #fff, #ffd700); }
+        .theme-fire { background-image: linear-gradient(to right, #ff416c, #ff4b2b, #ff416c); }
+        .theme-ocean { background-image: linear-gradient(to right, #00d2ff, #3a7bd5, #00d2ff); }
+        .theme-neon { background-image: linear-gradient(to right, #b21df3, #3bceac, #b21df3); }
+
+        /* الهيدر والقوائم */
+        .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; flex-shrink: 0; }
+        .side { position: fixed; top: 0; bottom: 0; width: 285px; background: #0e0e0e; z-index: 10000; transition: 0.3s; visibility: hidden; overflow-y: auto; }
+        #side-r { right: -290px; border-left: 2px solid var(--gold); }
+        #side-l { left: -290px; border-right: 2px solid var(--gold); }
         .side.active { visibility: visible; transform: translateX(0); }
-        #side-r.active { transform: translateX(-280px); }
-        #side-l.active { transform: translateX(280px); }
+        #side-r.active { transform: translateX(-285px); } #side-l.active { transform: translateX(285px); }
         #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 9000; display: none; }
 
-        /* منطقة الشات */
-        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 15px; background: #0b0b0b; }
-        .bubble { background: #1a1a1a; padding: 12px; border-radius: 15px; border: 1px solid #333; max-width: 85%; }
-        .badge { font-size: 10px; padding: 2px 8px; border-radius: 4px; font-weight: bold; margin-right: 5px; }
-        .badge-owner { background: gold; color: black; }
+        /* واجهة الزخرفة */
+        .decor-box { background: #1a1a1a; padding: 15px; border-radius: 10px; margin: 10px; border: 1px solid #333; }
+        .decor-btn { width: 100%; padding: 10px; margin-top: 5px; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; color: white; }
 
-        /* الفوتر (إصلاح الظهور في الحاسبة) */
-        .footer { height: 80px; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 15px; flex-shrink: 0; position: relative; z-index: 500; }
-        .input-wrapper { display: flex; width: 100%; gap: 10px; align-items: center; max-width: 1000px; margin: 0 auto; }
-        #msg-in { flex: 1; height: 50px; background: #181818; border: 1px solid #333; border-radius: 25px; color: #fff; padding: 0 20px; font-size: 16px; outline: none; }
-        #msg-in:focus { border-color: var(--gold); }
-        .send-btn { background: var(--gold); color: #000; border: none; height: 50px; padding: 0 25px; border-radius: 25px; font-weight: 900; cursor: pointer; transition: 0.2s; }
-        .send-btn:hover { transform: scale(1.05); }
+        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 15px; }
+        .bubble { background: #161616; padding: 12px; border-radius: 15px; border: 1px solid #222; max-width: 85%; }
+        .badge { font-size: 10px; padding: 2px 6px; border-radius: 4px; font-weight: bold; margin-right: 5px; background: #333; }
 
-        /* اليوتيوب */
-        .yt-frame { width: 100%; max-width: 300px; height: 170px; border-radius: 10px; margin-top: 10px; }
+        .footer { height: 80px; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 15px; z-index: 500; }
+        #msg-in { flex: 1; height: 50px; background: #111; border: 1px solid #333; border-radius: 25px; color: #fff; padding: 0 20px; outline: none; }
+        .send-btn { background: var(--gold); color: #000; border: none; height: 50px; padding: 0 20px; border-radius: 25px; font-weight: 900; cursor: pointer; margin-right: 10px; }
     </style>
 </head>
 <body>
@@ -57,34 +49,46 @@
 
 <div class="header">
     <button onclick="openSide('side-l')" style="background:none; border:none; font-size:24px; color:white; cursor:pointer;">⚙️</button>
-    <div class="king-style">إمبراطورية علوش</div>
+    <div class="name-glow theme-gold" style="font-size:18px;">إمبراطورية علوش</div>
     <button onclick="openSide('side-r')" style="background:none; border:none; font-size:24px; color:white; cursor:pointer;">👥</button>
 </div>
 
 <div id="side-r" class="side">
-    <h3 style="padding:20px; text-align:center; color:gold;">🛡️ المتصلون</h3>
+    <h3 style="padding:20px; text-align:center; color:gold;">🛡️ الإدارة والمتصلون</h3>
     <div id="admin-tools" style="padding:10px; display:none;">
-        <button onclick="db.ref('chat_v87').remove()" style="width:100%; background:red; color:white; border:none; padding:10px; border-radius:8px; cursor:pointer;">🧹 تنظيف الشات</button>
+        <button onclick="db.ref('chat_v88').remove()" class="decor-btn" style="background:red;">🧹 تنظيف الشات</button>
     </div>
     <div id="on-list" style="padding:10px;"></div>
 </div>
 
 <div id="side-l" class="side">
-    <div style="padding:30px; text-align:center;">
-        <img id="my-av" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:90px; height:90px; border-radius:50%; border:3px solid gold; cursor:pointer;" onclick="document.getElementById('file-in').click()">
+    <div style="padding:20px; text-align:center;">
+        <img id="my-av" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:80px; height:80px; border-radius:50%; border:2px solid gold; cursor:pointer;" onclick="document.getElementById('file-in').click()">
         <input type="file" id="file-in" hidden onchange="changeAv(this)">
-        <h2 class="king-style" style="margin-top:15px;">علوش</h2>
-        <span class="badge badge-owner">مالك الشات</span>
+        <h2 id="display-name" class="name-glow theme-gold">علوش</h2>
+    </div>
+
+    <div class="decor-box">
+        <p style="font-size:12px; color:gold; margin-bottom:10px;">✨ اختر ثيم لاسمك:</p>
+        <button class="decor-btn theme-gold" onclick="setTheme('theme-gold')">الذهبي الملكي</button>
+        <button class="decor-btn theme-fire" onclick="setTheme('theme-fire')">اللهب الأحمر</button>
+        <button class="decor-btn theme-ocean" onclick="setTheme('theme-ocean')">المحيط الأزرق</button>
+        <button class="decor-btn theme-neon" onclick="setTheme('theme-neon')">النيون الساحر</button>
+    </div>
+
+    <div class="decor-box">
+        <p style="font-size:12px; color:gold; margin-bottom:10px;">📝 زخرفة الاسم:</p>
+        <button class="decor-btn" style="background:#333;" onclick="setDecor('👑')">إضافة تاج 👑</button>
+        <button class="decor-btn" style="background:#333;" onclick="setDecor('⚔️')">إضافة سيوف ⚔️</button>
+        <button class="decor-btn" style="background:#333;" onclick="setDecor('')">إزالة الزخرفة</button>
     </div>
 </div>
 
 <div id="chat-flow"></div>
 
 <div class="footer">
-    <div class="input-wrapper">
-        <input type="text" id="msg-in" placeholder="أمرك مطاع يا إمبراطور..." onkeypress="if(event.key==='Enter') sendMsg()">
-        <button class="send-btn" onclick="sendMsg()">إرسال</button>
-    </div>
+    <input type="text" id="msg-in" placeholder="أمرك مطاع يا إمبراطور..." onkeypress="if(event.key==='Enter') sendMsg()">
+    <button class="send-btn" onclick="sendMsg()">إرسال</button>
 </div>
 
 <script>
@@ -92,8 +96,23 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let me = { name: "علوش", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png" };
+    let me = { 
+        name: "علوش", 
+        img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png",
+        theme: "theme-gold",
+        decor: "👑"
+    };
+
     if(me.name === "علوش") document.getElementById('admin-tools').style.display = 'block';
+
+    // وظائف الثيمات والزخرفة
+    function setTheme(t) { me.theme = t; updateProfileView(); }
+    function setDecor(d) { me.decor = d; updateProfileView(); }
+    function updateProfileView() {
+        const el = document.getElementById('display-name');
+        el.className = `name-glow ${me.theme}`;
+        el.innerText = `${me.decor} ${me.name} ${me.decor}`;
+    }
 
     function changeAv(input) {
         if(input.files && input.files[0]) {
@@ -105,37 +124,39 @@
 
     function sendMsg() {
         let i = document.getElementById('msg-in'); if(!i.value) return;
-        db.ref('chat_v87').push({ u: me.name, t: i.value, a: me.img });
+        db.ref('chat_v88').push({ 
+            u: me.name, 
+            t: i.value, 
+            a: me.img, 
+            theme: me.theme, 
+            decor: me.decor 
+        });
         i.value = "";
     }
 
-    function getYT(t) {
-        const m = t.match(/(?:youtube\.com\/(?:[^\/]+\/.+\/|(?:v|e(?:mbed)?)\/|.*[?&]v=)|youtu\.be\/)([^"&?\/\s]{11})/);
-        return m ? `<iframe class="yt-frame" src="https://www.youtube.com/embed/${m[1]}" frameborder="0" allowfullscreen></iframe>` : '';
-    }
-
-    db.ref('chat_v87').limitToLast(20).on('child_added', s => {
+    db.ref('chat_v88').limitToLast(20).on('child_added', s => {
         let d = s.val(); let isK = d.u === "علوش";
         let div = document.createElement('div');
         div.style.display="flex"; div.style.gap="10px"; div.style.marginBottom="15px";
         div.innerHTML = `<img src="${d.a || me.img}" style="width:40px; height:40px; border-radius:50%; border:1px solid gold;">
             <div class="bubble">
-                <span class="${isK?'king-style':''}">${d.u}</span> ${isK?'<span class="badge badge-owner">المالك</span>':''}
-                <div style="margin-top:5px;">${d.t}</div>${getYT(d.t)}
+                <span class="name-glow ${d.theme || 'theme-gold'}">${d.decor || ''} ${d.u} ${d.decor || ''}</span>
+                <span class="badge">${isK?'المالك':'عضو'}</span>
+                <div style="margin-top:5px;">${d.t}</div>
             </div>`;
         document.getElementById('chat-flow').appendChild(div);
         document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
     });
 
-    db.ref('online_v87/' + me.name).set(true);
-    db.ref('online_v87/' + me.name).onDisconnect().remove();
-    db.ref('online_v87').on('value', s => {
+    db.ref('online_v88/' + me.name).set(me);
+    db.ref('online_v88/' + me.name).onDisconnect().remove();
+    db.ref('online_v88').on('value', s => {
         let l = document.getElementById('on-list'); l.innerHTML = "";
         s.forEach(u => {
-            let isK = u.key === "علوش";
+            let data = u.val();
             l.innerHTML += `<div style="padding:12px; border-bottom:1px solid #222; display:flex; justify-content:space-between;">
-                <span class="${isK?'king-style':''}">${isK?'👑 ':''}${u.key}</span>
-                <span class="badge ${isK?'badge-owner':''}" style="color:gray;">${isK?'المالك':'عضو'}</span>
+                <span class="name-glow ${data.theme}">${data.decor || ''} ${u.key}</span>
+                <span class="badge">${u.key === "علوش" ? '👑' : '👤'}</span>
             </div>`;
         });
     });
