--- a/index.html
+++ b/index.html
@@ -3,23 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ALLOSH THEMES V88 👑</title>
+    <title>ALLOSH SUPREME V89 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
-        :root { --gold: #ffd700; --bg: #0b0b0b; --royal: linear-gradient(to right, #ffd700, #fff, #ffd700); }
+        :root { --gold: #ffd700; --bg: #0b0b0b; }
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
         body { background: var(--bg); color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
 
-        /* ثيمات الأسماء */
+        /* ثيمات الأسماء المتحركة */
         .name-glow { font-weight: 900; animation: shine 2s linear infinite; background-size: 200% auto; -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
         @keyframes shine { to { background-position: 200% center; } }
-        
         .theme-gold { background-image: linear-gradient(to right, #ffd700, #fff, #ffd700); }
         .theme-fire { background-image: linear-gradient(to right, #ff416c, #ff4b2b, #ff416c); }
         .theme-ocean { background-image: linear-gradient(to right, #00d2ff, #3a7bd5, #00d2ff); }
-        .theme-neon { background-image: linear-gradient(to right, #b21df3, #3bceac, #b21df3); }
 
         /* الهيدر والقوائم */
         .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; flex-shrink: 0; }
@@ -30,16 +28,26 @@
         #side-r.active { transform: translateX(-285px); } #side-l.active { transform: translateX(285px); }
         #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 9000; display: none; }
 
-        /* واجهة الزخرفة */
-        .decor-box { background: #1a1a1a; padding: 15px; border-radius: 10px; margin: 10px; border: 1px solid #333; }
-        .decor-btn { width: 100%; padding: 10px; margin-top: 5px; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; color: white; }
-
-        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 15px; }
+        /* الشات */
+        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 15px; background: #0b0b0b; }
         .bubble { background: #161616; padding: 12px; border-radius: 15px; border: 1px solid #222; max-width: 85%; }
-        .badge { font-size: 10px; padding: 2px 6px; border-radius: 4px; font-weight: bold; margin-right: 5px; background: #333; }
 
-        .footer { height: 80px; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 15px; z-index: 500; }
-        #msg-in { flex: 1; height: 50px; background: #111; border: 1px solid #333; border-radius: 25px; color: #fff; padding: 0 20px; outline: none; }
+        /* واجهة الزخرفة في الملف الشخصي */
+        .decor-box { background: #1a1a1a; padding: 12px; border-radius: 10px; margin: 10px; border: 1px solid #333; }
+        .custom-input { width: 100%; padding: 8px; border-radius: 5px; border: 1px solid #444; background: #000; color: white; text-align: center; margin-bottom: 10px; }
+        .decor-btn { width: 100%; padding: 8px; margin-top: 5px; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; color: white; }
+
+        /* الفوتر - إصلاح وضع الهاتف (الرفع للأعلى) */
+        .footer { 
+            height: 95px; /* زيادة الطول قليلاً */
+            background: #000; 
+            border-top: 1px solid #222; 
+            display: flex; 
+            align-items: flex-start; /* تغيير المحاذاة */
+            padding: 10px 15px 25px 15px; /* زيادة الـ padding السفلي لرفع الخانة */
+            z-index: 500;
+        }
+        #msg-in { flex: 1; height: 50px; background: #111; border: 1px solid #333; border-radius: 25px; color: #fff; padding: 0 20px; outline: none; font-size: 16px; }
         .send-btn { background: var(--gold); color: #000; border: none; height: 50px; padding: 0 20px; border-radius: 25px; font-weight: 900; cursor: pointer; margin-right: 10px; }
     </style>
 </head>
@@ -48,16 +56,13 @@
 <div id="overlay" onclick="closeSides()"></div>
 
 <div class="header">
-    <button onclick="openSide('side-l')" style="background:none; border:none; font-size:24px; color:white; cursor:pointer;">⚙️</button>
+    <button onclick="openSide('side-l')" style="background:none; border:none; font-size:24px; color:white;">⚙️</button>
     <div class="name-glow theme-gold" style="font-size:18px;">إمبراطورية علوش</div>
-    <button onclick="openSide('side-r')" style="background:none; border:none; font-size:24px; color:white; cursor:pointer;">👥</button>
+    <button onclick="openSide('side-r')" style="background:none; border:none; font-size:24px; color:white;">👥</button>
 </div>
 
 <div id="side-r" class="side">
-    <h3 style="padding:20px; text-align:center; color:gold;">🛡️ الإدارة والمتصلون</h3>
-    <div id="admin-tools" style="padding:10px; display:none;">
-        <button onclick="db.ref('chat_v88').remove()" class="decor-btn" style="background:red;">🧹 تنظيف الشات</button>
-    </div>
+    <h3 style="padding:20px; text-align:center; color:gold; border-bottom:1px solid #222;">🛡️ المتصلون</h3>
     <div id="on-list" style="padding:10px;"></div>
 </div>
 
@@ -69,25 +74,23 @@
     </div>
 
     <div class="decor-box">
-        <p style="font-size:12px; color:gold; margin-bottom:10px;">✨ اختر ثيم لاسمك:</p>
-        <button class="decor-btn theme-gold" onclick="setTheme('theme-gold')">الذهبي الملكي</button>
-        <button class="decor-btn theme-fire" onclick="setTheme('theme-fire')">اللهب الأحمر</button>
-        <button class="decor-btn theme-ocean" onclick="setTheme('theme-ocean')">المحيط الأزرق</button>
-        <button class="decor-btn theme-neon" onclick="setTheme('theme-neon')">النيون الساحر</button>
+        <p style="font-size:12px; color:gold; margin-bottom:10px;">✍️ اكتب زخرفتك الخاصة:</p>
+        <input type="text" id="custom-decor" class="custom-input" placeholder="مثال: 👑 ، ⚔️ ، ★" oninput="updateDecor()">
+        <p style="font-size:10px; color:gray;">ستظهر الزخرفة قبل وبعد اسمك</p>
     </div>
 
     <div class="decor-box">
-        <p style="font-size:12px; color:gold; margin-bottom:10px;">📝 زخرفة الاسم:</p>
-        <button class="decor-btn" style="background:#333;" onclick="setDecor('👑')">إضافة تاج 👑</button>
-        <button class="decor-btn" style="background:#333;" onclick="setDecor('⚔️')">إضافة سيوف ⚔️</button>
-        <button class="decor-btn" style="background:#333;" onclick="setDecor('')">إزالة الزخرفة</button>
+        <p style="font-size:12px; color:gold; margin-bottom:10px;">🎨 ثيم الاسم:</p>
+        <button class="decor-btn theme-gold" onclick="setTheme('theme-gold')">ذهبي</button>
+        <button class="decor-btn theme-fire" onclick="setTheme('theme-fire')">ناري</button>
+        <button class="decor-btn theme-ocean" onclick="setTheme('theme-ocean')">أزرق</button>
     </div>
 </div>
 
 <div id="chat-flow"></div>
 
 <div class="footer">
-    <input type="text" id="msg-in" placeholder="أمرك مطاع يا إمبراطور..." onkeypress="if(event.key==='Enter') sendMsg()">
+    <input type="text" id="msg-in" placeholder="اكتب رسالتك..." onkeypress="if(event.key==='Enter') sendMsg()">
     <button class="send-btn" onclick="sendMsg()">إرسال</button>
 </div>
 
@@ -100,18 +103,18 @@
         name: "علوش", 
         img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png",
         theme: "theme-gold",
-        decor: "👑"
+        decor: ""
     };
 
-    if(me.name === "علوش") document.getElementById('admin-tools').style.display = 'block';
-
-    // وظائف الثيمات والزخرفة
-    function setTheme(t) { me.theme = t; updateProfileView(); }
-    function setDecor(d) { me.decor = d; updateProfileView(); }
-    function updateProfileView() {
+    function updateDecor() {
+        me.decor = document.getElementById('custom-decor').value;
         const el = document.getElementById('display-name');
-        el.className = `name-glow ${me.theme}`;
         el.innerText = `${me.decor} ${me.name} ${me.decor}`;
+    }
+
+    function setTheme(t) { 
+        me.theme = t; 
+        document.getElementById('display-name').className = `name-glow ${t}`;
     }
 
     function changeAv(input) {
@@ -124,39 +127,31 @@
 
     function sendMsg() {
         let i = document.getElementById('msg-in'); if(!i.value) return;
-        db.ref('chat_v88').push({ 
-            u: me.name, 
-            t: i.value, 
-            a: me.img, 
-            theme: me.theme, 
-            decor: me.decor 
-        });
+        db.ref('chat_v89').push({ u: me.name, t: i.value, a: me.img, theme: me.theme, decor: me.decor });
         i.value = "";
     }
 
-    db.ref('chat_v88').limitToLast(20).on('child_added', s => {
-        let d = s.val(); let isK = d.u === "علوش";
+    db.ref('chat_v89').limitToLast(20).on('child_added', s => {
+        let d = s.val();
         let div = document.createElement('div');
         div.style.display="flex"; div.style.gap="10px"; div.style.marginBottom="15px";
         div.innerHTML = `<img src="${d.a || me.img}" style="width:40px; height:40px; border-radius:50%; border:1px solid gold;">
             <div class="bubble">
                 <span class="name-glow ${d.theme || 'theme-gold'}">${d.decor || ''} ${d.u} ${d.decor || ''}</span>
-                <span class="badge">${isK?'المالك':'عضو'}</span>
                 <div style="margin-top:5px;">${d.t}</div>
             </div>`;
         document.getElementById('chat-flow').appendChild(div);
         document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
     });
 
-    db.ref('online_v88/' + me.name).set(me);
-    db.ref('online_v88/' + me.name).onDisconnect().remove();
-    db.ref('online_v88').on('value', s => {
+    db.ref('online_v89/' + me.name).set(me);
+    db.ref('online_v89/' + me.name).onDisconnect().remove();
+    db.ref('online_v89').on('value', s => {
         let l = document.getElementById('on-list'); l.innerHTML = "";
         s.forEach(u => {
             let data = u.val();
-            l.innerHTML += `<div style="padding:12px; border-bottom:1px solid #222; display:flex; justify-content:space-between;">
+            l.innerHTML += `<div style="padding:12px; border-bottom:1px solid #222;">
                 <span class="name-glow ${data.theme}">${data.decor || ''} ${u.key}</span>
-                <span class="badge">${u.key === "علوش" ? '👑' : '👤'}</span>
             </div>`;
         });
     });
