--- a/index.html
+++ b/index.html
@@ -3,44 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>إمبراطورية علوش | V124 👑</title>
+    <title>إمبراطورية علوش | V125 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
-        body { background: #050505; color: white; font-family: 'Cairo', sans-serif; margin: 0; display: flex; align-items: center; justify-content: center; height: 100vh; }
-        .login-card { width: 90%; max-width: 380px; background: #111; padding: 25px; border-radius: 20px; border: 2px solid #ffd700; text-align: center; }
-        input { width: 100%; padding: 12px; margin: 10px 0; background: #1a1a1a; border: 1px solid #333; border-radius: 10px; color: white; text-align: center; outline: none; }
-        .btn-gold { width: 100%; padding: 12px; background: #ffd700; color: #000; border: none; border-radius: 100px; font-weight: 900; cursor: pointer; margin-top: 15px; }
-        #chat-window { display: none; width: 100%; height: 100vh; background: #000; flex-direction: column; }
+        body { background: #050505; color: white; font-family: 'Cairo', sans-serif; display: flex; align-items: center; justify-content: center; height: 100vh; margin: 0; }
+        .card { width: 90%; max-width: 380px; background: #111; padding: 30px; border-radius: 20px; border: 2px solid #ffd700; text-align: center; box-shadow: 0 0 20px #ffd70033; }
+        input { width: 100%; padding: 12px; margin: 10px 0; background: #1a1a1a; border: 1px solid #333; border-radius: 12px; color: white; text-align: center; outline: none; }
+        .btn { width: 100%; padding: 12px; border-radius: 100px; font-weight: 900; cursor: pointer; border: none; margin-top: 10px; transition: 0.3s; }
+        .btn-gold { background: #ffd700; color: #000; }
+        .btn-outline { background: transparent; color: #ffd700; border: 1px solid #ffd700; }
     </style>
 </head>
 <body>
 
-<div id="login-page" class="login-card">
+<div class="card">
     <h2 style="color:#ffd700;">دخول المملكة 👑</h2>
-    <p style="font-size:12px; color:#888;">سجل دخولك بالإيميل الذي اخترته</p>
+    <input type="email" id="email" placeholder="الإيميل">
+    <input type="password" id="pass" placeholder="الرمز">
     
-    <input type="email" id="email-in" placeholder="الإيميل">
-    <input type="password" id="pass-in" placeholder="الباسورد">
-    
-    <button class="btn-gold" onclick="handleLogin()">دخول الآن</button>
-    <button class="btn-gold" style="background:#333; color:white;" onclick="handleRegister()">إنشاء حساب جديد</button>
-</div>
-
-<div id="chat-window">
-    <div style="padding:15px; background:#111; border-bottom:2px solid #ffd700; display:flex; justify-content:space-between; align-items:center;">
-        <span id="user-tag" style="color:#ffd700; font-weight:bold;"></span>
-        <button onclick="location.reload()" style="background:red; color:white; border:none; padding:5px 15px; border-radius:10px;">خروج</button>
-    </div>
-    <div id="chat-content" style="flex:1; overflow-y:auto; padding:15px;"></div>
+    <button class="btn btn-gold" onclick="doLogin()">دخول مباشر</button>
+    <button class="btn btn-outline" onclick="doRegister()">إنشاء حساب جديد</button>
 </div>
 
 <script>
-    // إعدادات الربط - تم تحديثها لتعمل مع حسابك
+    // ⚠️ ملاحظة للملك: لكي يعمل هذا الكود، يجب أن تضع الـ API Key الخاص بك هنا
     const firebaseConfig = {
-        apiKey: "AIzaSyAs-WYourActualKeyHere", // سيتم استبداله تلقائياً عند التشغيل
+        apiKey: "ضع_هنا_API_KEY_الخاص_بك", 
         authDomain: "masterchat-f2da9.firebaseapp.com",
         databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com",
         projectId: "masterchat-f2da9",
@@ -50,26 +40,26 @@
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
 
-    // تسجيل جديد
-    function handleRegister() {
-        const e = document.getElementById('email-in').value;
-        const p = document.getElementById('pass-in').value;
+    function doRegister() {
+        const e = document.getElementById('email').value;
+        const p = document.getElementById('pass').value;
+        if(p.length < 6) { alert("الرمز يجب أن يكون 6 أحرف أو أكثر!"); return; }
+
         auth.createUserWithEmailAndPassword(e, p)
-            .then(() => alert("تم التسجيل! يمكنك الدخول الآن."))
-            .catch(err => alert("عذراً: " + err.message));
+            .then(() => { alert("مبروك! تم إنشاء الحساب بنجاح."); })
+            .catch(err => {
+                if(err.code === "auth/email-already-in-use") alert("هذا الإيميل مسجل مسبقاً! جرب الدخول المباشر.");
+                else if(err.code === "auth/operation-not-allowed") alert("يجب تفعيل (Email/Password) من لوحة تحكم Firebase أولاً!");
+                else alert("خطأ: " + err.message);
+            });
     }
 
-    // تسجيل دخول
-    function handleLogin() {
-        const e = document.getElementById('email-in').value;
-        const p = document.getElementById('pass-in').value;
+    function doLogin() {
+        const e = document.getElementById('email').value;
+        const p = document.getElementById('pass').value;
         auth.signInWithEmailAndPassword(e, p)
-            .then(() => {
-                document.getElementById('login-page').style.display = 'none';
-                document.getElementById('chat-window').style.display = 'flex';
-                document.getElementById('user-tag').innerText = "الإمبراطور: " + e.split('@')[0];
-            })
-            .catch(err => alert("خطأ في البيانات: " + err.message));
+            .then(() => { alert("تم الدخول بنجاح! سيتم تحويلك للشات."); })
+            .catch(err => { alert("بياناتك غلط أو الحساب غير موجود!"); });
     }
 </script>
 </body>
